fixed the overlapping problem

--- a/src/components/molecules/ConfigRow/index.less
+++ b/src/components/molecules/ConfigRow/index.less
@@ -1,5 +1,6 @@
 .node-card-wrapper {
-    display: flex;   
+    display: flex;
+    flex-wrap: wrap;
     gap: 16px;
     justify-content: flex-start;
     .key_heading {
